--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,python,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,python,jupyternotebooks
 
+### data folder ###
+data
+
+
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
